--- a/assets/css/prudukapi.css
+++ b/assets/css/prudukapi.css
@@ -74,3 +74,45 @@
   .bd-mode-toggle .dropdown-menu .active .bi {
     display: block !important;
   }
+
+  /* Responsive styles */
+@media (max-width: 1023px) {
+  header .container {
+    text-align: center;
+  }
+
+  header h3 {
+    margin-bottom: 20px;
+  }
+
+  .navbar-nav {
+    justify-content: center;
+  }
+}
+
+@media (max-width: 576px) {
+  .navbar-nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .navbar-nav .nav-item {
+    margin-bottom: 10px;
+  }
+
+  .album .container {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .album .row-cols-1 {
+    margin-left: -5px;
+    margin-right: -5px;
+  }
+
+  .album .g-3 {
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+}
